--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,7 +187,7 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 2.75em;
+		font-size: 4em;
 	}
 
 		h1.major {
@@ -3240,27 +3240,27 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #222;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #333;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #444;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #555;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #666;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #888;
 		}
 
 		.wrapper.fullscreen {
@@ -3524,7 +3524,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #111;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3761,7 +3761,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #888;
 			}
 
 			#sidebar nav a:after {
@@ -3907,3 +3907,20 @@ input, select, textarea {
 			}
 
 		}
+
+
+		.logotypes {
+			max-width: 100vw;
+			margin: 0 auto;
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			justify-content: center;
+		  }
+		  
+		  .logotypes img {
+			margin: 40px;
+			width: auto;
+			max-width: 100px;
+			max-height: 100px;
+		  }
